--- a/src/components/manage/Blocks/FullCalendar/fullcalendar.css
+++ b/src/components/manage/Blocks/FullCalendar/fullcalendar.css
@@ -1,7 +1,7 @@
-.fc-loader-wrapper .ui.loader {
-  display: block;
+.calendar-wrapper {
+  position: relative;
 }
 
-.fc-loader-wrapper.hidden {
-  display: none;
+.calendar-wrapper .ui.loader {
+  display: block;
 }
